--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title</title>
+    <title>My fris github repo</title>
 </head>
 <body>
+    <h1>My Dream website</h1>
+    <h2>My frist project:</h2>
+    <ul>
+        <li>Web design</li>
+        <li>web development</li>
+        <li>websites</li>
+    </ul>
     
 </body>
 </html>
